Sun May 25 18:59:30 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* Made headers more standalone.  Cleaned up includes.

Sun May  4 18:56:43 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/input.c (Input_GetString): Fix hexadecimal escape sequence.
	Support \? and \' escape sequences.
	* unittests/compare/core/string.s: Add & update test cases.

Sun May  4 15:35:43 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/def.s: Add disable & currently failing
	test case.

Sun May  4 15:32:44 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/lex.c (Lex_Char2Int): Merge into...
	(Lex_GetPrim): ...this. Add check on empty character constant.  Give
	warning on non-standard multi-character constant and implement it
	differently.
	* unittests/compare/core/directive_data_integer.s: Update test case.

Sun Apr  6 01:04:42 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/directive_storagemap.c: Drop support for ValueCode.
	(c_alloc): Add check on redefinition of mapping label.
	* src/symbol.c (Symbol_Define): When a symbol gets redefined, only
	use the Value_Equal test, Code_Eval should not be necessary anymore.

Sun Apr  6 01:02:51 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/register_types.s: Add test on register
	redefinition.

Sun Apr  6 01:01:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/storagemap_register.s: Add BASED AREA test.

Sun Apr  6 00:56:44 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	unittests/compare:
	* core/variables.s: Renamed to...
	* core/gblx_lclx_setx.s: ...this.

Sat Apr  5 23:48:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	unittests/compare:
	* Makefile.in (OUTPUTTYPE): Define as AOF or ELF depending on output
	fileformat choosen.
	(OUTPUTELF): Remove definition.
	* core/instr_b_bl_blx_reloc.s: Use OUTPUTTYPE instead of OUTPUTELF.
	* core/instr_bx_reloc.s: Likewise.
	* core/instr_cbz_cbnz.s: Likewise.
